# rtiow

./: .gitignore  Cargo.toml  readme.md
src/: aabb.rs  camera.rs  main.rs  materials.rs  ray.rs  renderer.rs  shapes.rs  vec3.rs
src/bvh/: aabb.rs  mod.rs
src/hittables/: constant_medium.rs  cube.rs  mod.rs  rectangles.rs  sphere.rs  transformations.rs
src/shapes/: mod.rs  rectangles.rs  sphere.rs
src/texture/: checker_texture.rs  image_texture.rs  mod.rs  noise_texture.rs  perlin.rs
