[package]
name = "rtiow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
piston_window = "0.128.0"
rand = {version = "0.8.5", features = ["min_const_gen"]}
rayon = "1.6.1"
indicatif = {version = "0.17.3", features = ["rayon"]}
paste = "1.0.12"